# vertx-demo

./: .gitignore  AWS.md  Dockerfile  README.md  compose.yaml  pom.xml
.run/: MainVerticle - simplest config.run.xml  MainVerticle with AWS Postgres.run.xml  MainVerticle.run.xml  Vert.x application - NetworkTestVerticle.run.xml  Vert.x application - no configs.run.xml  aws_5005.run.xml  localhost_5005.run.xml  vertx-demo [exec_java].run.xml
bash/apis/: IEX-Cloud.sh  alphavantage.sh  finnhub.sh  marketstack.sh  twelvedata.sh  yahoo.sh
bash/aws-instance-setup/: install-cloud-watch-agent.sh  install-docker.sh  setup-docker-repo.sh
bash/db/: connect-db-prod.sh
bash/dhall/: all.sh  compose-legacy.sh  compose.sh  compose2.sh  config.sh  configs.sh  current-compose-files.sh  dhall-file-to-json.sh  dhall-to-json-to-yaml-examples.sh  (+24 more)
configs/: compose-prod.yaml  conf.json
design/: 5-ipos-per-each.html  finance-dashboard.html  index.html  ipo-insider-dashboard.html  ipo-sections.html  ipo-viewer.html
dhall/: all.sh  calendar-ipo.sh  compose.sh  conf.sh  depens_on_example.sh  examples.sh  finnhub.sh  help.sh  here-string-to-stdout.sh  news-crypto.sh  news-forex.sh  news-general.sh  news-merger.sh  news.sh  perfect.sh
dhall/calendar-ipo-dhall-to-sql/: CHANGELOG.md  README.md  dhall-to-sql.cabal  rebuild.sh
dhall/calendar-ipo-dhall-to-sql/app/: Main.hs
docs/: AMQP.md  AWS-EC2-Setup.md  AWS-SSM-and-CloudWatch-Setup.md  Config-management.md  Maven-maintenance.md  Redis.md  docker.md
logs/: logback.xml
pgadmin/: servers.json
qpid/: default.json
sql/: init-db.sql
(+381 files in other folders)
