cabal-version:       2.2

name:                dhall-to-sql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dhall-to-sql#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable calendar-ipo-dhall-to-sql
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:
        base >= 4.7 && < 5
      , dhall
      , text
      , bytestring
  default-language:    Haskell2010
